<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".notFeelingWell">

        <ImageView
            android:id="@+id/tvVetPet"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:layout_marginTop="10dp"
            android:paddingVertical="100dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="Choose Your Animal"
            android:layout_gravity="left"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/EDITsub"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:hint="Subject"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:textSize="20sp" />

    <EditText
        android:hint="Content"
        android:layout_gravity="left"
        android:layout_width="340dp"
        android:layout_height="300dp"
        android:id="@+id/editBody"
        android:textSize="20sp"
        />
        <Button
            android:id="@+id/saveNFW"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="send"
            android:textSize="15dp" />


    </LinearLayout>
