...
        android:text="Log In"
        android:layout_gravity="center"
        android:textSize="30dp"/>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_below="@+id/et_username"
...

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_marginRight="5dp"
        android:text="Log in"
        android:textSize="11dp"

        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btn_forget"
...
