...
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="FAQ"
            android:background="@android:color/black"/>

        <Button
            android:id="@+id/btn_NFWell"
            android:layout_marginTop="10dp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:text="Not Felling Well"
            android:background="@android:color/black"/>

        <Button
            android:id="@+id/btn_NFWellAnswer"
            android:layout_marginTop="10dp"
            android:layout_width="240dp"
...
